@@ -261,7 +261,7 @@ following image formats are supported:
 @item AMV IMA ADPCM          @tab      @tab X
 @tab Used in AMV files
 @item MS IMA ADPCM           @tab X    @tab X
-@item QT IMA ADPCM           @tab      @tab X
+@item QT IMA ADPCM           @tab X    @tab X
 @item 4X IMA ADPCM           @tab      @tab X
 @item G.726  ADPCM           @tab X    @tab X
 @item Duck DK3 IMA ADPCM     @tab      @tab X
