@@ -110,6 +110,7 @@ version <next>
 - TechnoTrend PVA demuxer
 - Linux Media Labs MPEG-4 (LMLM4) demuxer
 - AVM2 (Flash 9) SWF muxer
+- QT variant of IMA ADPCM encoder
 
 version 0.4.9-pre1:
 
